# talkingDispenserV2

./: CMakeLists.txt  README.md  main.cpp
audio/: mic_input.cpp  mic_input.h  vowel_detector.cpp  vowel_detector.h  vowel_queue.cpp  vowel_queue.h
recognizer/: vosk_recognizer.cpp  vosk_recognizer.h
